--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,9 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am HIRANANDANI SONALI and this is my first webapp..
+        WELCOME
+        
+        -CREATED BY HIRANANDANI SONALI
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
