--- a/ui/article2.html
+++ b/ui/article2.html
@@ -1,2 +1,15 @@
 <html>
+    <head>
+        <title>
+        article 2
+            </title>
+            <a href="/">HOME</a>
+    </head>
+        
+        <body>
+            <h1>
+                hello again
+            </h1>
+        </body>
+            
 </html>
