[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,9 +9,13 @@
         </div>
         <br>
         <div class="center text-big bold">
-        WELCOME
+        RIGHAN..
+        <style>
+        textfont=times new roman;
+        color=red;
+        </style>
         
-        -CREATED BY HIRANANDANI SONALI
+        CREATED AND MAINTAINED BY:HIRANANDANI SONALI
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
