--- a/ui/index.html
+++ b/ui/index.html
@@ -28,11 +28,11 @@ article
 
 
 <h2>
-<img src="file:///media/ubuntu/848E-6A63/computer-1331579__180.png">
+<img src="https://www.google.co.in/search?q=NATURE&espv=2&biw=1535&bih=786&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjEo5yau6PPAhUX02MKHZERD_oQ_AUIBigB#imgrc=XgoMyLFZ2zQ5rM%3A">
 </h2>
 
 <h3>
-<a href="file:///media/ubuntu/848E-6A63/computer-1331579__180.png">click here</a>
+<a href="https://www.google.co.in/search?q=NATURE&espv=2&biw=1535&bih=786&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjEo5yau6PPAhUX02MKHZERD_oQ_AUIBigB#imgrc=XgoMyLFZ2zQ5rM%3A">click here</a>
 </h3>
 <div style="background:black;text-align:center;color:white;padding-left:500px;padding-right:500px">
 
