[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -28,7 +28,7 @@ article
 
 
 <h2>
-<img src="https://www.google.co.in/search?q=NATURE&espv=2&biw=1535&bih=786&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjEo5yau6PPAhUX02MKHZERD_oQ_AUIBigB#imgrc=XgoMyLFZ2zQ5rM%3A">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5PKBhc3qh2ghL_cmqcf6OIeFm0Z584MXhwJr4dtbIJte92OvLxQ">
 </h2>
 
 <h3>
