[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -34,7 +34,7 @@ article
 
 <div style="background:black;text-align:center;color:white;padding-left:500px;padding-right:500px">
 
-<p><a href="//article1.html">about us</a>
+<p><a href="/ui/article1.html">about us</a>
 <a href="https://cloud.imad.hasura.io/code/files/ui%2Farticle2.html">say hello</a> </p>
 <p>HELLO ALL I AM SONALI..AND WE ARE HERE TO PROMOTE NATURE..BRAVO!!BUT HOW ..??I WILL EXPLIAN YOU.WE SIMPLY WILL PROVIDE YOU PURE HOMEMADE ORANGE PEEL POWDER..THAT YOU NEED TO APPLY!
 </p>
