[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,8 +9,8 @@ alert('welcome');
 .y{background:black;}
 .x{text-align:center;color:red; }
 
-A:link{color:yellow;}
-A:hover{color:blue;}
+A:link{color:white;}
+A:hover{color:yellow;}
 </style>
 <title>
 article
