[imad-console] Updates ui/article1.html

--- a/ui/article1.html
+++ b/ui/article1.html
@@ -1,10 +1,10 @@
 <html>
     <head>
         <title>
-           about
+           about us
         </title>
         <style>
-        .x{text-align:center;color:red;padding-left:500px;padding-right-right=500px;}
+        .x{text-align:center;color:red;padding-left:500px;padding-right=500px;}
         </style>
     </head>
     <body>
@@ -14,7 +14,7 @@
         <hr/>
         <h1>
             ABOUT US
-            </h1>
+         </h1>
             
         <div class="x">
          <p>
