--- a/ui/article1.html
+++ b/ui/article1.html
@@ -4,7 +4,7 @@
            about us
         </title>
         <style>
-        .x{text-align:center;color:red;padding-left:500px;padding-right=500px;}
+        .x{text-align:center;color:red;;}
         </style>
     </head>
     <body>
