--- a/ui/article1.html
+++ b/ui/article1.html
@@ -4,7 +4,7 @@
            about us
         </title>
         <style>
-        .x{text-align:center;color:red;;}
+        .x{text-align:center;color:red;}
         </style>
     </head>
     <body>
