[imad-console] Updates ui/article1.html

--- a/ui/article1.html
+++ b/ui/article1.html
@@ -4,7 +4,7 @@
            about us
         </title>
         <style>
-        .x{text-align:center;color:red;position:absolute;}
+        .x{color:red;padding-left:500px;padding-right:500px;}
         </style>
     </head>
     <body>
