--- a/ui/article1.html
+++ b/ui/article1.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>
+        <title style="text-align:center;color:red">
            about us
         </title>
         <style>
