[imad-console] Updates ui/article1.html

--- a/ui/article1.html
+++ b/ui/article1.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title style="text-align:center;color:red">
+        <title style="x">
            about us
         </title>
         <style>
