[imad-console] Updates ui/article1.html

--- a/ui/article1.html
+++ b/ui/article1.html
@@ -3,8 +3,8 @@
         <style>
         .x{color:red;padding-left:500px;padding-right:500px;}
         </style>
-        <title style="x">
-           about us
+        <title>
+           <c>about us</c>
         </title>
         
     </head>
