[imad-console] Updates ui/article1.html

--- a/ui/article1.html
+++ b/ui/article1.html
@@ -4,7 +4,7 @@
         .x{color:red;padding-left:500px;padding-right:500px;}
         </style>
         <title>
-           <c>about us</c>
+           about us
         </title>
         
     </head>
