[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -37,7 +37,9 @@ article
 
 <p>HELLO ALL I AM SONALI..AND WE ARE HERE TO PROMOTE NATURE..BRAVO!!BUT HOW ..??I WILL EXPLIAN YOU.WE SIMPLY WILL PROVIDE YOU PURE HOMEMADE ORANGE PEEL POWDER..THAT YOU NEED TO APPLY!
 </p>
-
+<p>
+    <a href:""></a>
+    </p>
 
 </div>
 </div>
