[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -33,13 +33,9 @@ article
 
 <div style="background:black;text-align:center;color:white;padding-left:500px;padding-right:500px">
 
-<p><a href="http://hiranandanisonal.imad.hasura-app.io/article1">about us</a></p>
-<p>
-    <a href:"http://hiranandanisonal.imad.hasura-app.io/article2">say hello</a>
-    </p>
-    
-    <p>
-    <a href:"">shop</a>
+<p><a href="http://hiranandanisonal.imad.hasura-app.io/article1">about us</a>|
+    <a href:"http://hiranandanisonal.imad.hasura-app.io/article2">say hello</a>|
+    <a href:"shop">shop</a>
     </p>
     
 
