[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,8 +6,8 @@ alert('WELCOME TO HIRANANDANI HOME REMEDIES');
 </script>
 
 <style>
-.y{background:black;}
-.x{text-align:center;color:red; }
+.y{background:white;}
+.x{text-align:center;color:red;border:3px red solid; }
 
 A:link{color:white;}
 A:hover{color:yellow;}
