[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -37,7 +37,7 @@ article
 </h2>
 
 
-<div style="background:green;text-align:center;color:white;padding-left:500px;padding-right:500px;font-family:sans-serif ";>
+<div style="background:green;text-align:center;color:red;padding-left:500px;padding-right:500px;font-family:sans-serif ";>
 
     <p>
     <a href="http://hiranandanisonal.imad.hasura-app.io/article1" target="_sameframe"><b>about us</a> |
