[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -26,7 +26,7 @@ article
 <div class="y">
 <div class="x">
 
-<h1 style="font-family:zapfino;">
+<h1 style="font-family:braganza;">
 <u>HIRANANDANI HOME REMEDIES</u>
 </h1>
 
