[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -35,7 +35,7 @@
     Institute:SCET<br />
     City:Surat<br />
     State:Gujarat<br />
-    Nationality:Indian
+    Nationality:Indian<br />
     Area of interest:Web design,Networking,Programming<br />
     </p>
     </div>
