[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -37,7 +37,7 @@
     City:Surat<br />
     State:Gujarat<br />
     Nationality:Indian<br />
-    Area of interest:Web design,Networking,Programming<br />
+    Area of interest:Web desig,Networking,Programming<br />
     </p>
     </div>
     </div>
