--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
     
     <style>
 
-    <link href="style.css" rel="stylesheet"  type="text/css" />
+    <link href="/ui/style.css" rel="stylesheet"  type="text/css" />
 
     </style>
     
