[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,6 +14,7 @@
 </head>   
 
 <body>
+    <div class="whole">
     
     <h2 class="head">
       nature logo 
@@ -39,6 +40,7 @@
     Nationality:Indian<br />
     Area of interest:Web desig,Networking,Programming<br />
     </p>
+    </div>
     </div>
 </body>
 </html>
