[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -29,7 +29,7 @@
         <a href="/ui/contact.html">contact us</a> |   
      </p>
     
-    <p>
+    <p class="imp">
     Creator's profile<br />
     
     Name:Hiranandani Sonali<br />
