--- a/ui/index.html
+++ b/ui/index.html
@@ -1,24 +1,18 @@
 <!doctype html>
 <html>
 <head>
+    
 <script>
 alert('WELCOME TO HIRANANDANI HOME REMEDIES');
 </script>
 
 
-<style>
-.y{background-image:url("http://cdn1.askiitians.com/cms-content/biologymorphology-of-flowering-plantsleaf_0.jpg");background-repeat:no-repeat;}
-.x{text-align:center;color:green;border:1px green solid; }
-A:link{
-text-decoration:none;
-color:yellow;}
-A:hover{color:red;}
-</style>
 
 
 <title>
 article
 </title>
+<link href="style.css" rel="stylesheet" />
 </head>
 
 
