[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,6 +17,7 @@ article
 
 
 <body>
+    <div class="div">
 <div class="y">
 <div class="x">
 
@@ -44,6 +45,7 @@ article
    Welcome to our website.Your desire for royal home products will be fulfilled here.
     </p>
 
+</div>
 </div>
 </div>
 </body>
