--- a/ui/index.html
+++ b/ui/index.html
@@ -29,7 +29,7 @@ article
 </h2>
 
 
-<div style="background:green;text-align:center;color:white;padding-left:500px;padding-right:500px;font-family:sans-serif ";>
+<div>
 
     <p>
     <a href="http://hiranandanisonal.imad.hasura-app.io/article1" target="_sameframe"><b>about us</a> |
