[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,7 @@
     <head>
     <title>Home</title>
     
-    <link="style.css" rel="stylesheet">
+    <link="style.css" rel="stylesheet /">
     </head>
     
     <body>
