[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,7 @@
     <head>
     <title>Home</title>
     
-    <link href="/ui/style.CSS" rel="stylesheet" type="type/css" />
+    <link href="/ui/style.css" rel="stylesheet" type="type/css" />
     </head>
     
     <body>
