[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,11 +4,7 @@
 
 <head>
 
-<script>
 
-alert('WELCOME TO HIRANANDANI HOME REMEDIES');
-
-</script>
 <link href="/ui/style.css" rel="stylesheet"/>
 
 <title>
@@ -21,7 +17,7 @@ article
 
 <body>
 
-<div class="y">
+
 
 <div class="x">
 <h1>
@@ -38,7 +34,7 @@ article
 </h2>
 
 
-<div style="background:green;text-align:center;color:white;padding-left:500px;padding-right:500px;font-family:sans-serif ";>
+<div style="x">
 
 
     <p>
@@ -60,7 +56,7 @@ article
 
 </div>
 
-</div>
+
 
 </body>
 
