--- a/ui/article1.html
+++ b/ui/article1.html
@@ -4,7 +4,7 @@
         <title>
            about us
         </title>
-    <link href="/ui/style.css" rel:"stylesheet" />  
+    <link href="/ui/style.css" rel="stylesheet" />  
     </head>
     <body>
         <div class="x">
