[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,8 @@ article
 <script>
 alert('Welcome to the Hiranandani home remedies');
 </script>
-
+<script type="text/javascript" src="/ui/main.js">
+</script>
 </head>
 
 <body>
