[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -23,7 +23,7 @@ alert('Welcome to the Hiranandani home remedies');
 
 
 
-    <div id='main-text' class="x">
+    <div id="main-text" class="x">
     <h1>
     
         <u>HIRANANDANI HOME REMEDIES</u>
