[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -23,8 +23,8 @@ alert('Welcome to the Hiranandani home remedies');
 
 
 
-    <div  id="main-text"  class="x">
-    <h1>
+    <div   class="x">
+    <h1 id="main-text" >
     
         <u>HIRANANDANI HOME REMEDIES</u>
     
