--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,7 @@ alert('Welcome to the Hiranandani home remedies');
 
 
     <div   class="x">
-    <h1 id="main-text">
+    <h1 id="main">
     
         HIRANANDANI HOME REMEDIES
     
