--- a/ui/index.html
+++ b/ui/index.html
@@ -33,6 +33,7 @@ sonali's blog
     <h2>
    
     <p>
+        <input type="button" value="hello" name="btn1" id="btn1" onclick="open_google()">
         <a href="http://hiranandanisonal.imad.hasura-app.io/about me" target="_sameframe">about me</a> |
       
         <a href="http://hiranandanisonal.imad.hasura-app.io/contact me">contact me</a> |
