[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -33,7 +33,7 @@ sonali's blog
     <h2>
    
     <p>
-        <input type="button" value="hello" name="btn1" id="btn1" onclick="open_google()">
+        <input type="image" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/square-facebook-512.png" width="100" height="100">
         <a href="http://hiranandanisonal.imad.hasura-app.io/about me" target="_sameframe">about me</a> |
       
         <a href="http://hiranandanisonal.imad.hasura-app.io/contact me">contact me</a> |
