--- a/ui/index.html
+++ b/ui/index.html
@@ -20,6 +20,7 @@ sonali's blog
 </script>
 
 
+    <div style="background:url(https://media.giphy.com/media/j87i7eGYbx756/giphy.gif);">
 
     <div   class="x">
         <center>
@@ -57,6 +58,7 @@ sonali's blog
        Welcome to my blog space.I use to write various interesting blogs here.
     </p>
 </div>
+   </div>
    </div>
    </body>
     
