[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@ sonali's blog
 </script>
 
 
-    <div style="background:url(https://media.giphy.com/media/j87i7eGYbx756/giphy.gif)">
+    <div style="background image:url(https://media.giphy.com/media/j87i7eGYbx756/giphy.gif)">
 
     <div   class="x">
         <center>
