--- a/ui/index.html
+++ b/ui/index.html
@@ -61,6 +61,16 @@ sonali's blog
        <input type ="password" id="password" />
        <input type="submit" id="submit_btn" />
     </p>
+     <div id="login_area">
+                <center>Loading login status...</center>
+            </div>
+            <hr/>
+            <h3>My Articles</h3>
+            <div id="articles">
+                <center>Loading articles...</center>
+            </div>
+            <div class="footer">
+            </div>
 </div>
    </div>
    
